<resources>
    <string name="app_name">EnhyunTest</string>
    <string name="store_txt1">매장을</string>
    <string name="store_txt2">선택해주세요.</string>
    <string name="join_txt1">회원정보를</string>
    <string name="join_txt2">입력해주세요.</string>
    <string name="order_notice1">[공지]</string>
    <string name="order_notice2">- 오더 서비스는 각 카페에서 공지한 시간에 이용하실 수 있습니다.</string>
    <string name="order_notice3">[주문 접수]</string>
    <string name="order_notice4">- 1회 쵀대 10잔 까지 주문할 수 있습니다.</string>
    <string name="order_notice5">- 일부 메뉴의 경우 매장 상황에 따라 주문이 불가능할 수 있습니다.</string>
    <string name="order_notice6">[주문 지연]</string>
    <string name="order_notice7">- 매장에서 주문 메뉴 승인이 지연되는 경우, 주문한 시간으로부터 3분 후 App으로 주문 지연 안내가 되고(주문 취소 가능), 주문한 시간으로부터 10분 후에는 주문이 자동 취소됩니다.</string>
</resources>